[package]
name = "dabus-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
flume = "0.10.12"
log = "0.4.16"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
futures = "0.3.21"
async-recursion = "1.0.0"
thiserror = "1.0.31"
derivative = "2.2.0"
anyhow = "1.0.57"

[dependencies.dabus]
path = "../dabus"
