[package]
name = "dabus"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.12"
log = "0.4.16"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
futures = "0.3.21"
async-recursion = "1.0.0"
thiserror = "1.0.31"
derivative = "2.2.0"